--- a/app/assets/stylesheets/homepages.scss
+++ b/app/assets/stylesheets/homepages.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the homepages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+h1 {
+font-family: 'Oregano', cursive;
+	font-size: 96px;
+	margin-top: -100px;
+
+}
+
+h5 {
+	font-family: 'Oregano', cursive;
+	font-size: 72px;
+	margin-top: -100px;
+}
