font sizing and text

--- a/app/views/homepages/index.html.erb
+++ b/app/views/homepages/index.html.erb
@@ -32,8 +32,8 @@
 
       <div class="row about">
         <div class="medium-6 large-8 columns">
-          <h4>About</h4>
-          <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.</p>
+          <h2>About</h2>
+          <h4>  I am a results oriented Front End Developer with an eye for design and the ability to complete projects on time and within budget. I've managed teams up to 100 in the fast paced world of TV Production. I aim to break through the challenges that lie ahead, grow into a solid developer, and create applications that help people everyday.</h4>
         </div>
         <div class="medium-6 large-4 columns">
           <%= image_tag("headshot") %>
@@ -43,8 +43,8 @@
       <div class="row work">
         <hr>
         <div class="large-12 columns">
-          <h4>Work</h4>
-          <p>Click on each image to view my work!</p>
+          <h2>Projects</h2>
+          <h4>Click on each image to view my projects!</h4>
 
           <ul class="clearing-thumbs small-block-grid-1 medium-block-grid-2 large-block-grid-4" data-clearing>
             <li>
@@ -67,16 +67,16 @@
       <div class="row contact">
         <hr>
         <div class="large-12 columns">
-          <h4>Contact Me</h4>
+          <h2>Contact Me</h2>
           <div class="large-4 columns">
-            <strong>Email</strong>: <a href="#"><span class="__cf_email__" data-cfemail="09646c49647079667b7d6f66656066276a6664">[email protected]</span><script cf-hash='f9e31' type="text/javascript">
-/* <![CDATA[ */!function(){try{var t="currentScript"in document?document.currentScript:function(){for(var t=document.getElementsByTagName("script"),e=t.length;e--;)if(t[e].getAttribute("cf-hash"))return t[e]}();if(t&&t.previousSibling){var e,r,n,i,c=t.previousSibling,a=c.getAttribute("data-cfemail");if(a){for(e="",r=parseInt(a.substr(0,2),16),n=2;a.length-n;n+=2)i=parseInt(a.substr(n,2),16)^r,e+=String.fromCharCode(i);e=document.createTextNode(e),c.parentNode.replaceChild(e,c)}}}catch(u){}}();/* ]]> */</script></a>
+            <h4><strong>Email</strong>: aglionep@gmail.com<!-- <a href=""><span class="__cf_email__" data-cfemail="09646c49647079667b7d6f66656066276a6664">[]</span><script cf-hash='f9e31' type="text/javascript">
+/* <![CDATA[ */!function(){try{var t="currentScript"in document?document.currentScript:function(){for(var t=document.getElementsByTagName("script"),e=t.length;e--;)if(t[e].getAttribute("cf-hash"))return t[e]}();if(t&&t.previousSibling){var e,r,n,i,c=t.previousSibling,a=c.getAttribute("data-cfemail");if(a){for(e="",r=parseInt(a.substr(0,2),16),n=2;a.length-n;n+=2)i=parseInt(a.substr(n,2),16)^r,e+=String.fromCharCode(i);e=document.createTextNode(e),c.parentNode.replaceChild(e,c)}}}catch(u){}}();/* ]]> */</script></a> -->
           </div>
           <div class="large-4 columns">
-            <strong>Twitter</strong>: @twitterhandle
+            <h4><strong>Profile</strong>: <a href="https://profiles.generalassemb.ly/profiles/paulaglione"> Click Here!</a></h4>
           </div>
           <div class="large-4 columns">
-            <strong>Phone</strong>: 555-555-1234
+            <h4><strong>Phone</strong>: 310 - 848 - 4148 </h4>
           </div>
         </div>
       </div>
@@ -85,14 +85,10 @@
         <div class="large-12 columns">
           <div class="row">
             <div class="large-6 columns">
-              <p>© Copyright no one at all. Go to town.</p>
+              <h6>© Fat Garlic Design</h6>
             </div>
             <div class="large-6 columns">
-              <ul class="inline-list right">
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">Privacy</a></li>
-                <li><a href="#">Suscribe</a></li>
-              </ul>
+              
             </div>
           </div>
         </div>
