add project pics

--- a/app/views/homepages/index.html.erb
+++ b/app/views/homepages/index.html.erb
@@ -44,22 +44,26 @@
         <hr>
         <div class="large-12 columns">
           <h2>Projects</h2>
-          <h4>Click on each image to view my projects!</h4>
+          <h4>Click on each image to view my projects!</h4> <br>
 
           <ul class="clearing-thumbs small-block-grid-1 medium-block-grid-2 large-block-grid-4" data-clearing>
-            <li>
-              <a href="http://placehold.it/550x300">
-              <img data-caption="caption here" src="http://placehold.it/550x300"></a>
+            
+            <li>    
+              <a href="https://crcafe.herokuapp.com/cafes"> <%= image_tag("crcafepic") %> </a>  
             </li>
+            
             <li>
-              <a href="http://placehold.it/550x300"><img data-caption="caption 2 here..." src="http://placehold.it/550x300"></a>
+              <a href="https://paulsproject2.herokuapp.com/"> <%= image_tag("fieldspic") %> </a>
             </li>
+            
             <li>
-              <a href="http://placehold.it/550x300"><img data-caption="caption 3 here..." src="http://placehold.it/550x300"></a>
+              <a href="https://bustrackerapp.herokuapp.com/stops"> <%= image_tag("bustrackerpic") %> </a>
             </li>
+            
             <li>
-              <a href="http://placehold.it/550x300"><img data-caption="caption 4 here..." src="http://placehold.it/550x300"></a>
+              <a href="https://paulstttapp.firebaseapp.com"> <%= image_tag("tennispic") %> </a>
             </li>
+          
           </ul>
         </div>
       </div>
@@ -73,7 +77,7 @@
 /* <![CDATA[ */!function(){try{var t="currentScript"in document?document.currentScript:function(){for(var t=document.getElementsByTagName("script"),e=t.length;e--;)if(t[e].getAttribute("cf-hash"))return t[e]}();if(t&&t.previousSibling){var e,r,n,i,c=t.previousSibling,a=c.getAttribute("data-cfemail");if(a){for(e="",r=parseInt(a.substr(0,2),16),n=2;a.length-n;n+=2)i=parseInt(a.substr(n,2),16)^r,e+=String.fromCharCode(i);e=document.createTextNode(e),c.parentNode.replaceChild(e,c)}}}catch(u){}}();/* ]]> */</script></a> -->
           </div>
           <div class="large-4 columns">
-            <h4><strong>Profile</strong>: <a href="https://profiles.generalassemb.ly/profiles/paulaglione"> Click Here!</a></h4>
+            <h4><strong>Profile</strong>: <a href="https://profiles.generalassemb.ly/profiles/paulaglione"> Click Here! </a> </h4>
           </div>
           <div class="large-4 columns">
             <h4><strong>Phone</strong>: 310 - 848 - 4148 </h4>
