change crcafe link

--- a/app/views/homepages/index.html.erb
+++ b/app/views/homepages/index.html.erb
@@ -49,7 +49,7 @@
           <ul class="clearing-thumbs small-block-grid-1 medium-block-grid-2 large-block-grid-4">
             
             <li> 
-             <a href="https://crcafe.herokuapp.com/cafes" > <%= image_tag("crcafepic") %> </a>
+             <a href="https://crcafe.herokuapp.com/" > <%= image_tag("crcafepic") %> </a>
             </li>
             
             <li>
