--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,4 +15,4 @@
  *= require foundation_and_overrides
 
  */
-@import url(https://fonts.googleapis.com/css?family=Oregano);
+/*@import url(https://fonts.googleapis.com/css?family=Oregano);*/
