--- a/app/assets/stylesheets/homepages.scss
+++ b/app/assets/stylesheets/homepages.scss
@@ -4,14 +4,14 @@
 
 
 h1 {
-font-family: 'Oregano', cursive;
+font-family: 'Oregano', cursive !important;
 	font-size: 96px;
 	margin-top: -150px;
 
 }
 
 h5 {
-	font-family: 'Oregano', cursive;
+	font-family: 'Oregano', cursive !important;
 	font-size: 72px;
 	margin-top: -120px;
 }
@@ -19,5 +19,5 @@ a {
 	color: #66F;
 }
 h2, h3, h4, h6 { 
-	font-family: 'Oregano', cursive;
+	font-family: 'Oregano', cursive !important;
 }
