--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,4 +15,4 @@
  *= require foundation_and_overrides
 
  */
-/*@import url(https://fonts.googleapis.com/css?family=Oregano);*/
+@import url(//fonts.googleapis.com/css?family=Oregano);
