test google font in chrome

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,22 @@
 
  */
 @import url(//fonts.googleapis.com/css?family=Oregano);
+
+h1 {
+font-family: 'Oregano', cursive !important;
+	font-size: 96px;
+	margin-top: -150px;
+
+}
+
+h5 {
+	font-family: 'Oregano', cursive !important;
+	font-size: 72px;
+	margin-top: -120px;
+}
+a {
+	color: #66F;
+}
+h2, h3, h4, h6 { 
+	font-family: 'Oregano', cursive !important;
+}
