--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title><%= content_for?(:title) ? yield(:title) : "Paul Aglione's Portfolio" %></title>
-    <link href='http://fonts.googleapis.com/css?family=Oregano' rel='stylesheet' type='text/css'>
+    
     
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "vendor/modernizr" %>
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-
+    <link href='//fonts.googleapis.com/css?family=Oregano' rel='stylesheet' type='text/css'>
     <%= yield %>
 
   </body>
